# Django_shop_app

./: Dockerfile  README.md  docker-compose.yaml  import-products.csv  order_import.csv  products-export.csv  pyproject.toml
Testing/mysite/: db.sqlite3
Testing/mysite/myauth/: tests.py
Testing/mysite/shopapp/: tests.py
mysite/: db.sqlite3  demo.py  shopapp-fixtures.json
mysite/blogapp/: admin.py  models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: __init__.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middleware.py  urls.py  validators.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: group-fixture.json  order-fixture.json  product-fixture.json  shopapp-products-fixtures.xml  user-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_alter_order_user.py  0008_product_created_by.py  0009_order_receipt.py  0010_product_preview.py  0011_productimage.py  0012_alter_order_options_alter_product_options_and_more.py  0013_alter_product_description_alter_product_name.py
(+37 files in other folders)
